--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -153,23 +153,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\Application.h" />
     <ClInclude Include="src\Astra\Core.h" />
     <ClInclude Include="src\Astra\EntryPoint.h" />
-    <ClInclude Include="src\Astra\graphics\buffers\Vertex.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\Heap.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\KdTree.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\Map.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\Simplifier.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\SimpStructs.h" />
-    <ClInclude Include="src\Astra\graphics\LayerEntity.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\Animation.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\Animator.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\AssimpReader.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\Bone.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\BoneInfo.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\BoneReader.h" />
-    <ClInclude Include="src\Astra\graphics\entities\animation\KeyStructs.h" />
-    <ClInclude Include="src\Astra\graphics\Resource.h" />
     <ClInclude Include="src\Astra\Log.h" />
-    <ClInclude Include="src\Astra\math\Quat.h" />
     <ClInclude Include="src\Astra\Scene.h" />
     <ClInclude Include="src\Astra\Window.h" />
     <ClInclude Include="src\Astra\audio\AudioController.h" />
@@ -179,22 +163,41 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\events\KeyEvent.h" />
     <ClInclude Include="src\Astra\events\MouseEvent.h" />
     <ClInclude Include="src\Astra\graphics\Color.h" />
+    <ClInclude Include="src\Astra\graphics\LayerEntity.h" />
+    <ClInclude Include="src\Astra\graphics\Resource.h" />
     <ClInclude Include="src\Astra\graphics\buffers\CubeMapTexture.h" />
     <ClInclude Include="src\Astra\graphics\buffers\FrameBuffer.h" />
+    <ClInclude Include="src\Astra\graphics\buffers\Mesh.h" />
     <ClInclude Include="src\Astra\graphics\buffers\ShadowFrameBuffer.h" />
     <ClInclude Include="src\Astra\graphics\buffers\Texture.h" />
+    <ClInclude Include="src\Astra\graphics\buffers\Vertex.h" />
     <ClInclude Include="src\Astra\graphics\buffers\WaterFrameBuffer.h" />
     <ClInclude Include="src\Astra\graphics\entities\Camera.h" />
     <ClInclude Include="src\Astra\graphics\entities\DirectionalLight.h" />
     <ClInclude Include="src\Astra\graphics\entities\Light.h" />
+    <ClInclude Include="src\Astra\graphics\entities\Model.h" />
     <ClInclude Include="src\Astra\graphics\entities\PointLight.h" />
     <ClInclude Include="src\Astra\graphics\entities\Spatial.h" />
     <ClInclude Include="src\Astra\graphics\entities\SpotLight.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\Animation.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\Animator.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\AssimpReader.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\Bone.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\BoneInfo.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\BoneReader.h" />
+    <ClInclude Include="src\Astra\graphics\entities\animation\KeyStructs.h" />
     <ClInclude Include="src\Astra\graphics\entities\terrains\HeightGenerator.h" />
     <ClInclude Include="src\Astra\graphics\entities\terrains\Terrain.h" />
     <ClInclude Include="src\Astra\graphics\entities\terrains\WaterTile.h" />
-    <ClInclude Include="src\Astra\graphics\buffers\Mesh.h" />
-    <ClInclude Include="src\Astra\graphics\entities\Model.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\EdgeHeap.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Heap.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\KdTree.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Map.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\SimpStructs.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Simplifier.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\SimplifierStructs.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\SymMatrix.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\VertGroup.h" />
     <ClInclude Include="src\Astra\graphics\gizmos\Gizmo.h" />
     <ClInclude Include="src\Astra\graphics\gizmos\GizmoController.h" />
     <ClInclude Include="src\Astra\graphics\guis\Button.h" />
@@ -269,6 +272,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\math\MathsDefines.h" />
     <ClInclude Include="src\Astra\math\MathsFuncs.h" />
     <ClInclude Include="src\Astra\math\MathsUtils.h" />
+    <ClInclude Include="src\Astra\math\Quat.h" />
     <ClInclude Include="src\Astra\math\Vec2.h" />
     <ClInclude Include="src\Astra\math\Vec3.h" />
     <ClInclude Include="src\Astra\math\Vec4.h" />
@@ -291,29 +295,31 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp" />
-    <ClCompile Include="src\Astra\graphics\buffers\FrameBuffer.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\animation\Animation.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\animation\Animator.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\animation\Bone.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\utility\Simplifier.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\utility\SimpStructs.cpp" />
-    <ClCompile Include="src\Astra\graphics\Resource.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
     <ClCompile Include="src\Astra\graphics\Color.cpp" />
+    <ClCompile Include="src\Astra\graphics\Resource.cpp" />
     <ClCompile Include="src\Astra\graphics\buffers\CubeMapTexture.cpp" />
+    <ClCompile Include="src\Astra\graphics\buffers\FrameBuffer.cpp" />
+    <ClCompile Include="src\Astra\graphics\buffers\Mesh.cpp" />
     <ClCompile Include="src\Astra\graphics\buffers\ShadowFrameBuffer.cpp" />
     <ClCompile Include="src\Astra\graphics\buffers\Texture.cpp" />
     <ClCompile Include="src\Astra\graphics\buffers\WaterFrameBuffer.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Camera.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Light.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\Model.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Spatial.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\animation\Animation.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\animation\Animator.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\animation\Bone.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\HeightGenerator.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\Terrain.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\WaterTile.cpp" />
-    <ClCompile Include="src\Astra\graphics\buffers\Mesh.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\Model.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\EdgeHeap.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\SimpStructs.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Simplifier.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\VertGroup.cpp" />
     <ClCompile Include="src\Astra\graphics\gizmos\Gizmo.cpp" />
     <ClCompile Include="src\Astra\graphics\gizmos\GizmoController.cpp" />
     <ClCompile Include="src\Astra\graphics\guis\Gui.cpp" />
